--- a/package.json
+++ b/package.json
@@ -1,23 +1,16 @@
 {
   "name": "macheb",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "dependencies": {
-    "express": "^4.16.3"
-  },
-  "devDependencies": {},
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/infinith4/macheb.git"
-  },
-  "author": "infinith4",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/infinith4/macheb/issues"
-  },
-  "homepage": "https://github.com/infinith4/macheb#readme"
+  "dependencies": {
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.9",
+    "express": "~4.16.0",
+    "http-errors": "~1.6.2",
+    "morgan": "~1.9.0",
+    "pug": "2.0.0-beta11"
+  }
 }
