--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mysql": "^2.15.0",
     "mysql2": "^1.5.3",
     "pug": "2.0.0-beta11",
-    "sequelize": "^4.37.6"
+    "sequelize": "^4.37.6",
+    "sequelize-cli": "^4.0.0"
   }
 }
