--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "multer": "^1.3.0",
     "mysql": "^2.15.0",
     "mysql2": "^1.5.3",
+    "path": "^0.12.7",
     "pug": "2.0.0-beta11",
     "sequelize": "^4.37.6",
     "sequelize-cli": "^4.0.0"
